# basic-solana-nft

./: Anchor.toml
programs/nft/: Cargo.toml
programs/nft/src/: lib.rs
tests/: nft.ts
