[package]
name = "nft"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
mpl-token-metadata = "1.13.1"
anchor-spl = { version = "0.28.0", features = ["metadata"] }
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
